k8s/services/matrix/app/synapse-admin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
